--- a/index.html
+++ b/index.html
@@ -10,30 +10,27 @@
 
 <div class="container">
 
-  <!-- Address -->
   <label class="label">Address or Domain Name</label>
   <div class="input-box">
     <input type="text" value="TKDxyv1d1krLSfynn3jQrY">
     <div class="right-icons">
       <span class="text-btn">Paste</span>
 
-      <!-- User icon -->
       <span class="icon">
         <svg viewBox="0 0 24 24">
           <path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5Zm0 2c-4.4 0-8 2.2-8 5v1h16v-1c0-2.8-3.6-5-8-5Z"/>
         </svg>
       </span>
 
-      <!-- Scan icon -->
       <span class="icon">
         <svg viewBox="0 0 24 24">
-          <path d="M3 7V3h4M21 7V3h-4M3 17v4h4M21 17v4h-4" fill="none" stroke-width="2"/>
+          <path d="M3 7V3h4M21 7V3h-4M3 17v4h4M21 17v4h-4"
+                fill="none" stroke-width="2"/>
         </svg>
       </span>
     </div>
   </div>
 
-  <!-- Amount -->
   <label class="label">Amount</label>
   <div class="input-box">
     <input type="text" placeholder="Amount">
@@ -45,26 +42,22 @@
 
   <div class="rate">= $</div>
 
-  <!-- Memo -->
   <label class="label">Memo</label>
   <div class="input-box">
     <input type="text">
     <div class="right-icons">
-
-      <!-- Scan icon -->
       <span class="icon">
         <svg viewBox="0 0 24 24">
-          <path d="M3 7V3h4M21 7V3h-4M3 17v4h4M21 17v4h-4" fill="none" stroke-width="2"/>
+          <path d="M3 7V3h4M21 7V3h-4M3 17v4h4M21 17v4h-4"
+                fill="none" stroke-width="2"/>
         </svg>
       </span>
 
-      <!-- Info icon -->
       <span class="icon alert">
         <svg viewBox="0 0 24 24">
           <path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2Zm0 6a1.2 1.2 0 1 1-1.2 1.2A1.2 1.2 0 0 1 12 8Zm1.5 9h-3v-2h1v-3h-1V10h3v5h1Z"/>
         </svg>
       </span>
-
     </div>
   </div>
 
