--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Send UI</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>dApp</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,20 +13,13 @@
   <label class="label">Address or Domain Name</label>
   <div class="input-box">
     <input type="text" value="TKDxyv1d1krLSfynn3jQrY">
-    <div class="right-icons">
-      <span class="text-btn">Paste</span>
-
+    <div class="icons">
+      <span class="text">Paste</span>
       <span class="icon">
-        <svg viewBox="0 0 24 24">
-          <path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5Zm0 2c-4.4 0-8 2.2-8 5v1h16v-1c0-2.8-3.6-5-8-5Z"/>
-        </svg>
+        <svg viewBox="0 0 24 24"><path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5Zm0 2c-4.4 0-8 2.2-8 5v1h16v-1c0-2.8-3.6-5-8-5Z"/></svg>
       </span>
-
       <span class="icon">
-        <svg viewBox="0 0 24 24">
-          <path d="M3 7V3h4M21 7V3h-4M3 17v4h4M21 17v4h-4"
-                fill="none" stroke-width="2"/>
-        </svg>
+        <svg viewBox="0 0 24 24"><path d="M3 7V3h4M21 7V3h-4M3 17v4h4M21 17v4h-4" fill="none" stroke-width="2"/></svg>
       </span>
     </div>
   </div>
@@ -34,9 +27,9 @@
   <label class="label">Amount</label>
   <div class="input-box">
     <input type="text" placeholder="Amount">
-    <div class="right-icons">
-      <span class="muted">USDT</span>
-      <span class="text-btn">Max</span>
+    <div class="icons">
+      <span class="unit">USDT</span>
+      <span class="text">Max</span>
     </div>
   </div>
 
@@ -45,25 +38,19 @@
   <label class="label">Memo</label>
   <div class="input-box">
     <input type="text">
-    <div class="right-icons">
+    <div class="icons">
       <span class="icon">
-        <svg viewBox="0 0 24 24">
-          <path d="M3 7V3h4M21 7V3h-4M3 17v4h4M21 17v4h-4"
-                fill="none" stroke-width="2"/>
-        </svg>
+        <svg viewBox="0 0 24 24"><path d="M3 7V3h4M21 7V3h-4M3 17v4h4M21 17v4h-4" fill="none" stroke-width="2"/></svg>
       </span>
-
       <span class="icon alert">
-        <svg viewBox="0 0 24 24">
-          <path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2Zm0 6a1.2 1.2 0 1 1-1.2 1.2A1.2 1.2 0 0 1 12 8Zm1.5 9h-3v-2h1v-3h-1V10h3v5h1Z"/>
-        </svg>
+        <svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2Zm0 6a1.2 1.2 0 1 1-1.2 1.2A1.2 1.2 0 0 1 12 8Zm1.5 9h-3v-2h1v-3h-1V10h3v5h1Z"/></svg>
       </span>
     </div>
   </div>
 
 </div>
 
-<button class="next-btn">Next</button>
+<button class="next">Next</button>
 
 </body>
 </html>
