--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
       <input id="memo">
       <div class="actions">
         <svg viewBox="0 0 24 24">
-          <path d="M19 11h-8a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v1.5a1 1 0 0 1-1 1z"></path>
-          <path d="M19 19H5a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
-        </svg>
+        <path d="M4 7V4h3"></path>
+        <path d="M17 4h3v3"></path>
+        <path d="M20 17v3h-3"></path>
+        <path d="M7 20H4v-3"></path>
+      </svg>
   </div>
 
   <div class="price">≈ ₹<span id="inr">0.00</span></div>
