--- a/index.html
+++ b/index.html
@@ -3,92 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tron</title>
+  <title>Send USDT</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<div class="page">
 
-<div class="container">
+  <div class="header">
+    <span class="back">←</span>
+    <h1>Send USDT</h1>
+  </div>
 
   <label>Address or Domain Name</label>
-  <div class="input-box" id="addressBox">
-    <input id="address" value="TKDxyv1d1krLSfynn3jQrYfbkLmR8SYy3p" readonly>
-    <div class="actions">
-      <span class="paste">Paste</span>
+  <div class="input-box">
+    <input placeholder="Search or Enter">
+    <div class="right">
+      <span class="accent">Paste</span>
       <svg viewBox="0 0 24 24">
-        <rect x="9" y="9" width="13" height="13" rx="2"></rect>
-        <path d="M5 15V5a2 2 0 0 1 2-2h10"></path>
+        <rect x="9" y="9" width="13" height="13" rx="2"/>
+        <path d="M5 15V5a2 2 0 0 1 2-2h10"/>
       </svg>
       <svg viewBox="0 0 24 24">
-        <path d="M4 7V4h3"></path>
-        <path d="M17 4h3v3"></path>
-        <path d="M20 17v3h-3"></path>
-        <path d="M7 20H4v-3"></path>
+        <path d="M4 7V4h3"/>
+        <path d="M17 4h3v3"/>
+        <path d="M20 17v3h-3"/>
+        <path d="M7 20H4v-3"/>
       </svg>
     </div>
   </div>
 
   <label class="mt">Destination network</label>
-  <div class="pill">
-    <svg class="tron" viewBox="0 0 64 64">
-  <circle cx="32" cy="32" r="32" fill="#0B0E11"/>
-  <path fill="#F3BA2F" d="
-    M32 10
-    22 16 26 18 32 14 38 18 42 16
-    32 10
-
-    16 22
-    16 42 22 46 22 26
-    16 22
-
-    48 22
-    48 42 42 46 42 26
-    48 22
-
-    32 50
-    22 44 26 42 32 46 38 42 42 44
-    32 50
-
-    26 18
-    26 26 32 30 38 26 38 18
-    32 22
-    26 18
-
-    26 42
-    26 34 32 30 38 34 38 42
-    32 38
-    26 42
-  "/>
-</svg>
+  <div class="network-pill">
+    <svg class="tron-logo" viewBox="0 0 64 64">
+      <circle cx="32" cy="32" r="32" fill="#FF3B3B"/>
+      <path fill="#fff" d="M18 14 46 22 36 50 18 14zm10 10 8 20 6-16-14-4z"/>
+    </svg>
     <span>Tron ▾</span>
   </div>
 
   <label class="mt">Amount</label>
-  <div class="input-box" id="amountBox">
-    <input id="amount" placeholder="USDT Amount" inputmode="decimal">
-    <span class="usdt">USDT</span>
+  <div class="input-box">
+    <input placeholder="USDT Amount">
     <span class="max">Max</span>
   </div>
 
-  <div class="price">≈ ₹<span id="inr">0.00</span></div>
-  <div>
-    <label class="mt">Memo</label>
-    <div class="input-box">
-      <input id="memo">
-      <div class="actions">
-        <svg viewBox="0 0 24 24">
-        <path d="M4 7V4h3"></path>
-        <path d="M17 4h3v3"></path>
-        <path d="M20 17v3h-3"></path>
-        <path d="M7 20H4v-3"></path>
+  <label class="mt">Memo</label>
+  <div class="input-box">
+    <input>
+    <div class="right">
+      <svg viewBox="0 0 24 24">
+        <path d="M4 7V4h3"/>
+        <path d="M17 4h3v3"/>
+        <path d="M20 17v3h-3"/>
+        <path d="M7 20H4v-3"/>
       </svg>
+      <span class="info">i</span>
+    </div>
   </div>
 
+  <button class="next">Next</button>
+
 </div>
-
-<button id="next">Next</button>
-
 
 </body>
 </html>
