--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <div class="page">
 
   <div class="header">
-    <span class="back">←</span>
-    <h1>Send USDT</h1>
+    <div class="header-left">←</div>
+    <div class="header-title">Send USDT</div>
+    <div class="header-right"></div>
   </div>
 
   <label>Address or Domain Name</label>
