--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 <div class="page">
 
   <div class="header">
-    <div class="header-left">←</div>
-    <div class="header-title">Send USDT</div>
-    <div class="header-right"></div>
+  <div class="header-left">
+    <svg class="back-icon" viewBox="0 0 24 24">
+      <path d="M15 18L9 12L15 6" />
+    </svg>
   </div>
+  <div class="header-title">Send USDT</div>
+  <div class="header-right"></div>
+</div>
 
   <label>Address or Domain Name</label>
   <div class="input-box">
