--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <div class="network-pill">
     <svg class="tron-logo" viewBox="0 0 256 256">
       <circle cx="128" cy="128" r="128" fill="#FF2E2E"/>
-      <path d="M62 52l132 24-66 128L62 52z" fill="none" stroke="#fff" stroke-width="14" stroke-linejoin="round"/>
-      <path d="M62 52l66 152" fill="none" stroke="#fff" stroke-width="14" stroke-linejoin="round"/>
-      <path d="M194 76L128 204" fill="none" stroke="#fff" stroke-width="14" stroke-linejoin="round"/>
+      <path d="M62 52l132 24-66 128L62 52z"/>
+      <path d="M62 52l66 152"/>
+      <path d="M194 76L128 204"/>
     </svg>
     Tron ▾
   </div>
