--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 
   <label>Destination network</label>
   <div class="network-pill">
-    <svg class="tron-logo" viewBox="0 0 256 256">
-      <circle cx="128" cy="128" r="128" fill="#FF2E2E"/>
-      <path d="M62 52l132 24-66 128L62 52z"/>
-      <path d="M62 52l66 152"/>
-      <path d="M194 76L128 204"/>
+    <svg class="tron-logo" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 16" id="Trx--Streamline-Cryptocurrency" height="16" width="16">
+  <desc>
+    Trx Streamline Icon: https://streamlinehq.com
+  </desc>
+  <path fill="#ef0027" d="M8 16c4.4183 0 8 -3.5817 8 -8 0 -4.41828 -3.5817 -8 -8 -8C3.58172 0 0 3.58172 0 8c0 4.4183 3.58172 8 8 8Z" stroke-width="0.5"></path>
+  <path fill="#ffffff" d="M10.966 4.95654 3.75 3.62854l3.7975 9.55601 5.2915 -6.447 -1.873 -1.78101ZM10.85 5.54155l1.104 1.0495 -3.019 0.5465 1.915 -1.596Zm-2.571 1.4865 -3.182 -2.63901 5.201 0.95701 -2.019 1.682Zm-0.2265 0.467 -0.519 4.29L4.736 4.74354l3.3165 2.75151Zm0.48 0.2275 3.3435 -0.605 -3.835 4.6715 0.4915 -4.0665Z" stroke-width="0.5"></path>
     </svg>
     Tron ▾
   </div>
