--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Send USDT</title>
+  <title>Trust UI</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,32 +30,38 @@
 
   <label>Destination network</label>
   <div class="network-pill">
-    <svg class="tron-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-      <path fill="#ef0027" d="M8 16c4.4183 0 8-3.5817 8-8 0-4.41828-3.5817-8-8-8C3.58172 0 0 3.58172 0 8c0 4.4183 3.58172 8 8 8Z"/>
-      <path fill="#ffffff" d="M10.966 4.95654 3.75 3.62854l3.7975 9.55601 5.2915 -6.447 -1.873 -1.78101ZM10.85 5.54155l1.104 1.0495 -3.019 0.5465 1.915 -1.596Zm-2.571 1.4865 -3.182 -2.63901 5.201 0.95701 -2.019 1.682Zm-0.2265 0.467 -0.519 4.29L4.736 4.74354l3.3165 2.75151Zm0.48 0.2275 3.3435 -0.605 -3.835 4.6715 0.4915 -4.0665Z"/>
+    <svg class="tron-logo" viewBox="0 0 256 256">
+      <circle cx="128" cy="128" r="128" fill="#FF2E2E"/>
+      <path d="M62 52l132 24-66 128L62 52z"/>
+      <path d="M62 52l66 152"/>
+      <path d="M194 76L128 204"/>
     </svg>
-    <span>Tron ▾</span>
+    Tron ▾
   </div>
 
-  <label>Amount</label>
-  <div class="input-box">
-    <input placeholder="USDT Amount">
-    <div class="right">
-      <span class="max">Max</span>
+  <div class="amount-block">
+    <label>Amount</label>
+    <div class="input-box">
+      <input placeholder="USDT Amount">
+      <div class="right">
+        <span class="max">Max</span>
+      </div>
     </div>
   </div>
 
-  <label class="memo-label">Memo</label>
-  <div class="input-box">
-    <input>
-    <div class="right">
-      <svg viewBox="0 0 24 24">
-        <path d="M4 7V4h3"></path>
-        <path d="M17 4h3v3"></path>
-        <path d="M20 17v3h-3"></path>
-        <path d="M7 20H4v-3"></path>
-      </svg>
-      <div class="info">i</div>
+  <div class="memo-block">
+    <label>Memo</label>
+    <div class="input-box">
+      <input>
+      <div class="right">
+        <svg viewBox="0 0 24 24">
+          <path d="M4 7V4h3"></path>
+          <path d="M17 4h3v3"></path>
+          <path d="M20 17v3h-3"></path>
+          <path d="M7 20H4v-3"></path>
+        </svg>
+        <div class="info">i</div>
+      </div>
     </div>
   </div>
 
