--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <label>Address or Domain Name</label>
   <div class="input-box">
-    <input placeholder="TKDxyv1d1krLSfynn3jQrYfbkLmR8SYy3p" readonly>
+    <input value="TKDxyv1d1krLSfynn3jQrYfbkLmR8SYy3p" readonly>
     <div class="right">
       <span class="accent">Paste</span>
       <svg viewBox="0 0 24 24">
