--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="amount-block">
     <label>Amount</label>
     <div class="input-box">
-      <input placeholder="USDT Amount" inputmode="decimal">
+      <input type="number" placeholder="USDT Amount" inputmode="decimal">
       <div class="right">
         <span class="max">Max</span>
       </div>
